Clean code and update generic factories